letter spacing fix

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@200&display=swap');
 
 body {
   background-color: black;
@@ -10,37 +10,44 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 85vh;
+  height: 90vh;
 }
 
 .center{
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .clear{
-  margin-top: -25px;
+  margin-top: -32px;
 }
 
 #first {
   font-family: 'Prompt', sans-serif;
-  font-size: 120px;
+  font-size: 8vw;
   font-weight: bold;
   color: #D21242;
-  letter-spacing: 7px;
+  word-spacing: 8px;
 }
 
 #second {
   font-family: 'Prompt', sans-serif;
-  font-size: 120px;
+  font-size: 8vw;
   font-weight: bold;
   color: white;
-  letter-spacing: 7px;
+  word-spacing: 8px;
 }
 
 #forma {
-  font-family: 'Rubik', sans-serif;
-  font-size: 38px;
-  letter-spacing: 38px;
+  font-family: 'Jost', sans-serif;
+  font-size: 2.2vw;
+  color: white;
+  letter-spacing: 2.5vw;
+}
+
+.nospacing{
+  font-family: 'Jost', sans-serif;
+  font-size: 2.2vw;
   color: white;
 }
